@@ -41,16 +41,30 @@ class ShippingFlat extends IsotopeShipping
 		switch( $strKey )
 		{
 			case 'price':
+
+				$strPrice = $this->arrData['price'];
+				$blnPercentage = substr($strPrice, -1) == '%' ? true : false;
+				
+				if ($blnPercentage)
+				{
+					$fltSurcharge = (float)substr($strPrice, 0, -1);
+					$fltPrice = $this->Isotope->Cart->subTotal / 100 * $fltSurcharge;
+				}
+				else
+				{
+					$fltPrice = (float)$strPrice;
+				}
+				
 				switch( $this->flatCalculation )
 				{
 					case 'perProduct':
-						return $this->Isotope->calculatePrice((($this->arrData['price'] * $this->Isotope->Cart->products) + $this->calculateSurcharge()), $this, 'price', $this->arrData['tax_class']);
+						return $this->Isotope->calculatePrice((($fltPrice * $this->Isotope->Cart->products) + $this->calculateSurcharge()), $this, 'price', $this->arrData['tax_class']);
 						
 					case 'perItem':
-						return $this->Isotope->calculatePrice((($this->arrData['price'] * $this->Isotope->Cart->items) + $this->calculateSurcharge()), $this, 'price', $this->arrData['tax_class']);
+						return $this->Isotope->calculatePrice((($fltPrice * $this->Isotope->Cart->items) + $this->calculateSurcharge()), $this, 'price', $this->arrData['tax_class']);
 						
 					default:
-						return $this->Isotope->calculatePrice(($this->arrData['price'] + $this->calculateSurcharge()), $this, 'price', $this->arrData['tax_class']);
+						return $this->Isotope->calculatePrice(($fltPrice + $this->calculateSurcharge()), $this, 'price', $this->arrData['tax_class']);
 				}
 				break;
 		}
