@@ -402,7 +402,7 @@ CREATE TABLE `tl_iso_payment_modules` (
   `type` varchar(64) NOT NULL default '',
   `label` varchar(255) NOT NULL default '',
   `note` text NULL,
-  `price` decimal(12,2) NOT NULL default '0.00',
+  `price` varchar(16) NOT NULL default '',
   `tax_class` int(10) unsigned NOT NULL default '0',
   `countries` blob NULL,
   `shipping_modules` blob NULL,
@@ -475,7 +475,7 @@ CREATE TABLE `tl_iso_shipping_modules` (
   `subdivisions` longblob NULL,
   `minimum_total` decimal(12,2) NOT NULL default '0.00',
   `maximum_total` decimal(12,2) NOT NULL default '0.00',
-  `price` decimal(12,2) NOT NULL default '0.00',
+  `price` varchar(16) NOT NULL default '',
   `surcharge_field` varchar(255) NOT NULL default '',
   `flatCalculation` varchar(10) NOT NULL default '',
   `weight_unit` varchar(5) NOT NULL default '',
