@@ -13,6 +13,7 @@ Version 0.3.beta1
 Version 0.2.0
 ------------------------------
 - Added label for isotope_rules extension folder
+- Added support for percentage surcharge for payment and shipping price
 - Fixed address validation in checkout module
 
 Version 0.2.rc1 (2010-10-31)
